Created a userinfo command

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cli-color": "^2.0.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.28.0",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {}
