--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "moment": "^2.28.0",
+    "moment-duration-format": "^2.3.2",
     "mongoose": "^5.10.5"
   },
   "devDependencies": {}
