--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "bulbbot",
   "version": "1.0.0",
   "description": "A discord moderation bot written in Discord.JS",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
