:heavy_plus_sign: Add nodemon + dev script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "@types/eslint": "^7.2.3",
     "@types/moment-duration-format": "^2.2.2",
     "@types/mongoose": "^5.7.36",
-    "eslint": "^7.9.0"
+    "eslint": "^7.9.0",
+    "nodemon": "^2.0.4"
   }
 }
