Update eslint to warn on unused vars instead of error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,6 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
   }
 }
