--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^8.2.0",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "node-cron": "^2.0.3"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
