--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "moment": "^2.29.0",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.10.7",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
