--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "discord.js": "^12.3.1",
     "discord.js-pagination": "^1.0.2",
     "dotenv": "^8.2.0",
+    "jimp": "^0.16.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.10.9",
     "node-cron": "^2.0.3",
     "parse-duration": "^0.4.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "twemoji": "^13.0.1"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
