:wrench: I suppose this wrench can fix the mess I caused

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,7 @@
 TOKEN=<DISCORD_BOT_TOKEN>
 WEBHOOK_ID=<WEBHOOK_ID>
 WEBHOOK_TOKEN=<WEBHOOK_TOKEN>
+BOT_INVITE=<CHANNEL_ID>
 
 MONGODB_URI=<MONGODB_URI>
 
