--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "node-cron": "^2.0.3",
     "parse-duration": "^0.4.4",
     "request": "^2.88.2",
-    "twemoji": "^13.0.1"
+    "twemoji": "^13.0.1",
+    "unicode": "^12.1.0"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
