--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "parse-duration": "^0.4.4",
     "request": "^2.88.2",
     "twemoji": "^13.0.1",
-    "unicode": "^12.1.0"
+    "unicode": "^12.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cli-color": "^2.0.0",
