--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/TestersQTs/Bulbbot#readme",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "axios": "^0.21.0",
     "cli-color": "^2.0.0",
     "discord.js": "^12.4.1",
     "discord.js-pagination": "^1.0.2",
