--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
 		"moment": "^2.29.1",
+		"parse-duration": "^0.4.4",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
 		"sequelize": "^6.3.5"
