--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"pg-hstore": "^2.3.3",
 		"prom-client": "^13.0.0",
 		"sequelize": "^6.3.5",
+		"shelljs": "^0.8.4",
 		"winston": "^3.3.3"
 	},
 	"devDependencies": {
