.yml goes brrrrrrrr

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,13 +1,6 @@
-PREFIX=!
-EMBED_COLOR=#7289DA
-DEVELOPER_USER_ID=ID_1,ID_2
-BOT_TOKEN=<DISCORD_BOT_TOKEN>
+TOKEN=
 
-DM_WEBHOOK_ID=<WEBHOOK_ID>
-DM_WEBHOOK_TOKEN=<WEBHOOK_TOKEN>
-CHANNEL_ID_BOT_INVITES=<CHANNEL_ID>
-
-DB_NAME=<NAME>
-DB_USERNAME=<USERNAME>
-DB_PASSWORD=<PASSWORD>
-DB_HOST=<IP>
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
