--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
+		"js-yaml": "^3.14.1",
 		"moment": "^2.29.1",
 		"parse-duration": "^0.4.4",
 		"pg": "^8.5.1",
