--- a/src/config.yml
+++ b/src/config.yml
@@ -11,7 +11,7 @@ embedColor: "#7289DA"
 # client
 client:
   id: "755149065137815623"
-  game: "AAAAAA"
+  game: "Philip suffer in code"
   type: "WATCHING"
   status: "online"
   fetchAllUsers: false
