--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/TestersQTs/Bulbbot#readme",
 	"dependencies": {
 		"@hapi/hapi": "^20.0.3",
+		"axios": "^0.21.1",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
