--- a/src/config.yml
+++ b/src/config.yml
@@ -12,7 +12,7 @@ embedColor: "#7289DA"
 client:
   tag: "Bulbbot#9083"
   id: "755149065137815623"
-  game: "Philip suffer in code"
+  game: "Kluk suffer in code"
   type: "WATCHING"
   status: "online"
   fetchAllUsers: false
