Inf list + fixed Philip's broken code

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@hapi/hapi": "^20.0.3",
 		"axios": "^0.21.1",
 		"discord.js": "^12.5.1",
+		"discord.js-pagination": "^1.0.3",
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
 		"jimp": "^0.16.1",
