--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prom-client": "^13.0.0",
 		"sequelize": "^6.3.5",
 		"shelljs": "^0.8.4",
+		"unicode": "^12.1.0",
 		"winston": "^3.3.3"
 	},
 	"devDependencies": {
