--- a/src/config.yml
+++ b/src/config.yml
@@ -15,8 +15,8 @@ embedColor: "#7289DA"           # default embed color
 client:
   tag: "Bulbbot#9083"           # bot full tag
   id: "755149065137815623"      # bot id
-  game: "something"             # what the game activity should be
-  type: "COMPETING"             # COMPETING (5), WATCHING(3), LISTENING (2), STREAMING (1), PLAYING (0)
+  game: "the light shine"       # what the game activity should be
+  type: "WATCHING"              # COMPETING (5), WATCHING(3), LISTENING (2), STREAMING (1), PLAYING (0)
   status: "online"              # online, idle, dnd, invisible
   fetchAllUsers: false          # if the bot should fetch all the user on start
   disableMentions: "everyone"   # disable certain mentions
