--- a/src/config.yml
+++ b/src/config.yml
@@ -30,7 +30,8 @@ server:
 supportInvite: "https://discord.gg/cacUmbQ" # support guild invite link
 
 # logs
-botDM: "761572579504160788"       # channel id for bot dms 
-invite: "771491209977528340"      # channel id for bot invites
-error: "810530397804953611"       # channel id for bot errors
+botDM: "822864336028565534"       # channel id for bot dms 
+invite: "822864350603640842"      # channel id for bot invites
+error: "822864327303757874"       # channel id for bot errors
+debug: "822864498251005952"       # category id for debugging guilds
 translation: "820689105854660699" # channel id for untranslated strings
