--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	"homepage": "https://github.com/TestersQTs/Bulbbot#readme",
 	"dependencies": {
 		"@hapi/hapi": "^20.0.3",
+		"@sentry/node": "^6.2.3",
+		"@sentry/tracing": "^6.2.3",
 		"axios": "^0.21.1",
 		"discord.js": "^12.5.1",
 		"discord.js-pagination": "^1.0.3",
