added a pm2 start file

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "node src/index.js",
 		"dev": "nodemon",
+		"pm2-start": "pm2 start src/index.js --watch --log ./logs/ --time",
 		"db-sync": "node src/utils/database/sync.js"
 	},
 	"repository": "git+https://github.com/TestersQTs/Bulbbot.git",
