--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/TestersQTs/Bulbbot#readme",
 	"dependencies": {
 		"@hapi/hapi": "^20.1.2",
+		"@messageformat/runtime": "^3.0.0-beta.2",
 		"@sentry/node": "^6.2.5",
 		"@sentry/tracing": "^6.2.5",
 		"axios": "^0.21.1",
@@ -37,6 +38,7 @@
 		"unicode": "^12.1.0"
 	},
 	"devDependencies": {
+		"@messageformat/core": "^3.0.0-beta.3",
 		"prettier": "^2.2.1",
 		"sequelize-cli": "^6.2.0"
 	}
