--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"emoji-unicode": "^2.0.1",
 		"js-yaml": "^3.14.1",
 		"moment": "^2.29.1",
+		"moment-timezone": "^0.5.33",
 		"parse-duration": "^0.4.4",
 		"pg": "^8.5.1",
 		"pg-hstore": "^2.3.3",
