Added some sleep functions so we dont hit rate limits :sweat:

--- a/src/config.yml
+++ b/src/config.yml
@@ -13,6 +13,7 @@ lib: Discord.JS                 # lib used for the bot
 # configs
 prefix: "!"                     # default prefix
 embedColor: "#7289DA"           # default embed color
+massCommandSleep: 850       
 
 # client
 client:
