--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"start": "node build/index.js",
-		"dev": "nodemon",
+		"dev": "nodemon build/index.js",
 		"pm2-start": "pm2 start src/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"db-sync": "node src/utils/database/sync.js"
 	},
