--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "node build/index.js",
 		"dev": "nodemon build/index.js",
 		"pm2-start": "pm2 start src/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
-		"db-sync": "node src/utils/database/sync.js"
+		"db-sync": "node build/utils/database/sync.js"
 	},
 	"repository": "git+https://github.com/TestersQTs/Bulbbot.git",
 	"author": "TesterQTs",
