--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"devDependencies": {
 		"@messageformat/core": "^3.0.0-beta.3",
+		"@types/glob": "^7.1.3",
 		"prettier": "^2.2.1",
 		"sequelize-cli": "^6.2.0",
 		"typescript": "^4.2.4"
