New partial localization files

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"discord.js-pagination": "^1.0.3",
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
+		"i18next-icu": "^2.0.3",
 		"install": "^0.13.0",
+		"intl-messageformat": "^9.7.1",
 		"js-yaml": "^4.1.0",
 		"moment": "^2.29.1",
 		"moment-timezone": "^0.5.33",
