--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"discord.js-pagination": "^1.0.3",
 		"dotenv": "^8.2.0",
 		"emoji-unicode": "^2.0.1",
+		"i18next": "^20.3.2",
 		"i18next-icu": "^2.0.3",
 		"install": "^0.13.0",
 		"intl-messageformat": "^9.7.1",
