--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"sequelize": "^6.6.2",
 		"sharp": "^0.28.1",
 		"shelljs": "^0.8.4",
-		"unicode": "^12.1.0"
+		"unicode": "^12.1.0",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"@messageformat/core": "^3.0.0-beta.3",
