Fix an undefined value bug

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"watch": "tsc -w",
+		"prestart": "tsc",
 		"start": "node build/index.js",
+		"nobuild": "node build/index.js",
 		"dev": "nodemon build/index.js",
-		"pm2-start": "pm2 start src/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
+		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"db-sync": "node build/utils/database/sync.js"
 	},
 	"repository": "git+https://github.com/TestersQTs/Bulbbot.git",
