--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"prestart": "tsc",
 		"start": "node build/index.js",
 		"nobuild": "node build/index.js",
-		"dev": "nodemon build/index.js",
+		"dev": "nodemon build/index.js --ignore ./files",
 		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"db-sync": "node build/utils/database/sync.js"
 	},
@@ -20,37 +20,37 @@
 	},
 	"homepage": "https://github.com/TestersQTs/Bulbbot#readme",
 	"dependencies": {
-		"@hapi/hapi": "^20.1.2",
-		"@messageformat/runtime": "^3.0.0-beta.2",
-		"@sentry/node": "^6.2.5",
-		"@sentry/tracing": "^6.2.5",
+		"@hapi/hapi": "^20.1.5",
+		"@messageformat/runtime": "^3.0.0",
+		"@sentry/node": "^6.11.0",
+		"@sentry/tracing": "^6.11.0",
 		"axios": "^0.21.1",
-		"discord.js": "^12.5.3",
+		"discord.js": "^13.0.1",
 		"discord.js-pagination": "^1.0.3",
-		"dotenv": "^8.2.0",
+		"dotenv": "^10.0.0",
 		"emoji-unicode": "^2.0.1",
-		"i18next": "^20.3.2",
+		"i18next": "^20.4.0",
 		"i18next-icu": "^2.0.3",
 		"install": "^0.13.0",
-		"intl-messageformat": "^9.7.1",
+		"intl-messageformat": "^9.8.2",
 		"js-yaml": "^4.1.0",
 		"moment": "^2.29.1",
 		"moment-timezone": "^0.5.33",
-		"parse-duration": "^0.4.4",
-		"pg": "^8.6.0",
-		"pg-hstore": "^2.3.3",
-		"prom-client": "^13.1.0",
-		"sequelize": "^6.6.2",
-		"sharp": "^0.28.1",
+		"parse-duration": "^1.0.0",
+		"pg": "^8.7.1",
+		"pg-hstore": "^2.3.4",
+		"prom-client": "^13.2.0",
+		"sequelize": "^6.6.5",
+		"sharp": "^0.28.3",
 		"shelljs": "^0.8.4",
-		"unicode": "^12.1.0",
+		"unicode": "^13.0.0",
 		"winston": "^3.3.3"
 	},
 	"devDependencies": {
-		"@messageformat/core": "^3.0.0-beta.3",
-		"@types/glob": "^7.1.3",
-		"prettier": "^2.2.1",
+		"@messageformat/core": "^3.0.0",
+		"@types/glob": "^7.1.4",
+		"prettier": "^2.3.2",
 		"sequelize-cli": "^6.2.0",
-		"typescript": "^4.2.4"
+		"typescript": "^4.3.5"
 	}
 }
