jumbo now caches emotes so it goes a loooooot quicker now, updated to twemoji 13.1.0 sick burning heart

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	"devDependencies": {
 		"@messageformat/core": "^3.0.0",
 		"@types/glob": "^7.1.4",
+		"@types/sharp": "^0.28.5",
 		"prettier": "^2.3.2",
 		"sequelize-cli": "^6.2.0",
 		"typescript": "^4.3.5"
