some thread logging like, create and delete job for future to add who joins and leaves a thread have no idea how to do it currently too tired

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"nobuild": "node build/index.js",
 		"dev": "nodemon build/index.js --ignore ./files",
 		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
-		"db-sync": "node build/utils/database/sync.js"
+		"db-sync": "node build/utils/database/sync.js",
+		"delete:build": "rimraf build/*"
 	},
 	"repository": "git+https://github.com/TestersQTs/Bulbbot.git",
 	"author": "TesterQTs",
