--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     "baseUrl": "."
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts",
+  "include": ["./src/**/**/*.ts",
     "./src/.env.example", "./src/**/*.json", "./src/**/*.yml"],
 }
