--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -1,8 +1,8 @@
 name: Crowdin Action
 
 on:
-  push:
-    branches: [master]
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   synchronize-with-crowdin:
