--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"js-yaml": "^4.1.0",
 		"moment": "^2.29.1",
 		"moment-timezone": "^0.5.34",
+		"node-cron": "^3.0.0",
 		"parse-duration": "^1.0.2",
 		"pg": "^8.7.1",
 		"pg-hstore": "^2.3.4",
