--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"watch": "tsc -w",
+		"lint": "eslint .",
 		"prestart": "tsc",
 		"start": "node build/index.js",
 		"nobuild": "node build/index.js",
@@ -54,6 +55,11 @@
 		"@messageformat/core": "^3.0.0",
 		"@types/glob": "^7.2.0",
 		"@types/sharp": "^0.29.5",
+		"@typescript-eslint/eslint-plugin": "^5.16.0",
+		"@typescript-eslint/parser": "^5.16.0",
+		"eslint": "^8.12.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.25.4",
 		"prettier": "^2.5.1",
 		"sequelize-cli": "^6.4.1",
 		"typescript": "^4.5.5"
