--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
         "no-case-declarations": "off",
         "no-fallthrough": "warn",
         "no-empty": "warn",
+        "import/no-named-as-default-member": "off",
+        "import/no-unresolved": "off",
         "@typescript-eslint/no-unused-vars": [
             "warn",
             {
@@ -30,6 +32,8 @@
                 "argsIgnorePattern": "^_"
             }
         ],
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/prefer-ts-expect-error": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-function": "off",
