--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"dev": "nodemon build/index.js --ignore ./files",
 		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"sync:db": "node build/utils/database/sync.js",
-		"delete:build": "rimraf build/*"
+		"delete:build": "rimraf build/*",
+		"prepare": "husky install"
 	},
 	"repository": "git+https://github.com/TeamBulbbot//Bulbbot.git",
 	"author": "Team Bulbbot",
@@ -61,6 +62,8 @@
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.25.4",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.3.7",
 		"prettier": "^2.5.1",
 		"sequelize-cli": "^6.4.1",
 		"typescript": "^4.5.5"
