--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"lint": "eslint .",
+		"format": "prettier --write .",
 		"typecheck": "tsc --noEmit",
 		"prestart": "tsc",
 		"start": "node build/index.js",
@@ -64,7 +65,7 @@
 		"eslint-plugin-import": "^2.25.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
-		"prettier": "^2.5.1",
+		"prettier": "^2.6.1",
 		"sequelize-cli": "^6.4.1",
 		"typescript": "^4.5.5"
 	}
