--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 	"devDependencies": {
 		"@messageformat/core": "^3.0.0",
 		"@types/glob": "^7.2.0",
+		"@types/node": "^17.0.23",
 		"@types/sharp": "^0.29.5",
 		"@typescript-eslint/eslint-plugin": "^5.16.0",
 		"@typescript-eslint/parser": "^5.16.0",
