--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-non-null-assertion": "error",
-        "@typescript-eslint/no-inferrable-types": "warn"
+        "@typescript-eslint/no-inferrable-types": "warn",
+        "@typescript-eslint/consistent-type-assertions": "error"
     }
 }
