--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	},
 	"repository": "git+https://github.com/TeamBulbbot//Bulbbot.git",
 	"author": "Team Bulbbot",
-	"license": "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License",
+	"license": "CC-BY-NC-ND-4.0",
 	"bugs": {
 		"url": "https://github.com/TeamBulbbot//Bulbbot/issues"
 	},
