--- a/.eslintrc
+++ b/.eslintrc
@@ -21,12 +21,12 @@
     ],
     "rules": {
         "no-case-declarations": "off",
-        "no-fallthrough": "warn",
-        "no-empty": "warn",
+        "no-fallthrough": "error",
+        "no-empty": "error",
         "import/no-named-as-default-member": "off",
         "import/no-unresolved": "off",
         "@typescript-eslint/no-unused-vars": [
-            "warn",
+            "error",
             {
                 "varsIgnorePattern": "^_",
                 "argsIgnorePattern": "^_"
@@ -38,7 +38,7 @@
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-non-null-assertion": "error",
-        "@typescript-eslint/no-inferrable-types": "warn",
+        "@typescript-eslint/no-inferrable-types": "error",
         "@typescript-eslint/consistent-type-assertions": "error"
     }
 }
