--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"discord.js-pagination": "^1.0.3",
 		"dotenv": "^16.0.0",
 		"emoji-unicode": "^2.0.1",
+		"express": "^4.17.3",
 		"i18next": "^21.6.10",
 		"i18next-icu": "^2.0.3",
 		"imghash": "^0.0.9",
@@ -56,6 +57,7 @@
 	},
 	"devDependencies": {
 		"@messageformat/core": "^3.0.0",
+		"@types/express": "^4.17.13",
 		"@types/glob": "^7.2.0",
 		"@types/node": "^17.0.23",
 		"@types/sharp": "^0.29.5",
