--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ESNext",
     "module": "CommonJS",
     "lib": ["DOM", "ES6", "ESNext", "ESNext.AsyncIterable"],
     "skipLibCheck": true,
