Fix nodemon hotreloading to run the language script too
The package.json 'dev' script now references 'yarn' directly. If you want to use npm only, or don't want to install yarn, you can use 'npm run dev:npm' instead

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"typecheck": "tsc --noEmit",
 		"start": "node build/index.js",
 		"nobuild": "node build/index.js",
-		"dev": "nodemon build/index.js --ignore ./files",
+		"dev": "nodemon -w src -w tsconfig.json -w package.json -w types.d.ts -e ts,js,json,env --exec \\\"yarn\\\" -i src/languages/en-US.json -- start",
+		"dev:npm": "nodemon -w src -w tsconfig.json -w package.json -w types.d.ts -e ts,js,json,env --exec \\\"npm\\\" -i src/languages/en-US.json -- run start",
 		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"sync:db": "node build/utils/database/sync.js",
 		"delete:build": "rimraf build/*",
