--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"dev": "nodemon -w src -w tsconfig.json -w package.json -w types.d.ts -e ts,js,json,env --exec \\\"yarn\\\" -i src/languages/en-US.json -- start",
 		"pm2-start": "pm2 start build/index.js --watch --output ./logs/log.log --error ./logs/error.log --time --name bulbbot",
 		"delete:build": "rimraf build/*",
+		"clean": "rimraf build/*",
 		"prepare": "yarn husky install && yarn generate",
 		"generate": "prisma generate",
 		"db:migrate": "prisma migrate dev",
