moved the developer guild to the .env file

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,13 @@
 ENVIRONMENT=prod
+DEVELOPER_GUILD=784408056997216327
 
 TOKEN=
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DATABASE_URL=
+DB_URL=postgresql://DB_USER:DB_PASSWORD@DB_HOST:5432/DB_NAME
 
 PORT=
 
 SENTRY_DSN=
-ENABLE_SENTRY=
+ENABLE_SENTRY=true
 
-ENABLE_LOGGING=
+ENABLE_LOGGING=true
