--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "paths": {
       "@db/prisma": ["./src/prisma.ts"]
     },
-    "baseUrl": "."
+    "baseUrl": "src"
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/**/*.ts", "./src/**/*.json", "./src/**/*.yml",
